appId: ${APP_ID}
---
- stopApp
- openLink:
    link: ${EXPO_OPEN_URL}
- runFlow:
    when:
      visible: 'Open'
    commands:
      - tapOn: 'Open'
- runFlow:
    when:
      visible: '打开'
    commands:
      - tapOn: '打开'
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn: 'Continue'
- extendedWaitUntil:
    visible: 日记列表
    timeout: 60000
